fix: adapt pixel perfect on mobile version

--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,15 @@
 .header__logo {
   width: 142px;
+  margin-top: 45px;
   margin-bottom: 35px;
 }
 
 @media screen and (max-width: 767px) {
   .header__logo {
-    margin-bottom: 31.6px;
+    width: 103.74px;
+    height: 24.4px;
+    margin-top: 40px;
+    margin-bottom: 22px;
     margin-left: 27px;
   }
 }
