--- a/blocks/page/__header/page__header.css
+++ b/blocks/page/__header/page__header.css
@@ -1,7 +1,6 @@
 .page__header {
   max-width: 100%;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
-  margin-top: 45px;
   margin-right: auto;
   margin-bottom: 33px;
   margin-left: auto;
@@ -9,7 +8,6 @@
 
 @media screen and (max-width: 767px) {
   .page__header {
-    margin-top: 28px;
     margin-bottom: 42px;
   }
 }
