--- a/blocks/popup/__form-title/popup__form-title.css
+++ b/blocks/popup/__form-title/popup__form-title.css
@@ -12,6 +12,6 @@
   .popup__form-title {
     font-size: 18px;
     line-height: 21.78px;
-    margin-bottom: 75px;
+    margin-bottom: 70px;
   }
 }
