--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -5,6 +5,6 @@
 @media screen and (max-width: 767px) {
   .profile__avatar {
     margin: 0;
-    margin-bottom: 26px;
+    margin-bottom: 20px;
   }
 }
