--- a/blocks/profile/__name-block/profile__name-block.css
+++ b/blocks/profile/__name-block/profile__name-block.css
@@ -7,6 +7,6 @@
 
 @media screen and (max-width: 767px) {
   .profile__name-block {
-    margin-bottom: 14px;
+    margin-bottom: 10px;
   }
 }
